2010-04-05  Per Bothner  <per@bothner.com>

	* XSLT.java (parse): Set compilation state to BODY_PARSED
	to avoid confusion if Compilation.process is called.

2009-09-15  Per Bothner  <per@bothner.com>

	* XSLT.java (runStylesheet): Update for commandLineArgArray moved.
	Also call new ApplicationMainSupport.processSetProperties.

2009-08-27  Per Bothner  <per@bothner.com>

	* XSLT.java (runStylesheet): static commandLineArgArray was moved
	from kawa.repl to ModuleBody.

2009-03-01  Per Bothner  <per@bothner.com>

	* XslTranslator.java (maybeSkipWhitespace): New method.
	(startElement, endElement): Call maybeSkipWhitespace.
	(startElement, endElement): Add support for xsl:text.
	(endElement): Make sure xsl:value-of yields a text node.
	Add support for xsl:copy-of.
	Skip version attribute for xsl:stylesheet.
	Create fresh makeElement instance for each element constructor,
	because XQResolveNames.walkApplyExp calls setNamespaceNodes.
	(parseXPath): Move and modify from XSLT.java.
	Re-use existing Compilation.
	* XSLT.java (parseXPath): Moved to XslTranslator.java.
	(parse): Call XQResolveNames.resolveModule, mainly for xpath.
	(process): Fix various bugs and missing functionality.

2009-03-01  Per Bothner  <per@bothner.com>

	* XSLT.java (getCompilation): Remove - use inherited version.
	(parseXPath): Change to pass Compilation.
	* XslTranslator.java: Update accordingly.

2006-12-14  Per Bothner  <per@bothner.com>

	* XslTranslator.java: Update for new XMLParser API.

2006-12-06  Per Bothner  <per@bothner.com>

	* XslTranslator.java: Update for renamed Consumer methods.
	* XSLT.java: Likewise.

2006-12-01  Per Bothner  <per@bothner.com>

	* XslTranslator.java: Fix PreProcess typo JAVA -> JAVA5.

2006-11-25  Per Bothner  <per@bothner.com>

	* XslTranslator.java: StringValue.stringValue now in TextUtils.

2006-11-22  Per Bothner  <per@bothner.com>

	* XslTranslator.java: Partially revert changes from 11-17 and 11-18.

2006-11-18  Per Bothner  <per@bothner.com>
